--- a/lab1/requirements.txt
+++ b/lab1/requirements.txt
@@ -1,8 +1,20 @@
+PyYAML==3.11
+backports.shutil-get-terminal-size==1.0.0
 coverage==4.0.3
+decorator==4.0.9
 flake8==2.5.4
+ipdb==0.10.0
+ipython==4.2.0
+ipython-genutils==0.1.0
 mccabe==0.4.0
+mock==2.0.0
+pbr==1.9.1
 pep8==1.7.0
+pexpect==4.0.1
+pickleshare==0.7.2
+ptyprocess==0.5.1
 pyflakes==1.0.0
 python-dateutil==2.5.0
-PyYAML==3.11
+simplegeneric==0.8.1
 six==1.10.0
+traitlets==4.2.1
